@@ -6,6 +6,7 @@ import com.itcotato.naengjango.domain.member.entity.FixedExpenditure;
 import com.itcotato.naengjango.domain.member.entity.Member;
 import com.itcotato.naengjango.domain.member.entity.MemberAgreement;
 import com.itcotato.naengjango.domain.member.enums.SocialType;
+import com.itcotato.naengjango.domain.member.exception.code.MemberErrorCode;
 import com.itcotato.naengjango.domain.member.exception.code.SmsErrorCode;
 import com.itcotato.naengjango.domain.member.repository.AgreementRepository;
 import com.itcotato.naengjango.domain.member.repository.FixedExpenditureRepository;
@@ -48,18 +49,13 @@ public class MemberService {
     }
 
     /**
-     * 회원가입 시 회원 정보 저장
-     * 휴대폰 인증 완료 여부 확인 후 회원가입
+     * 일반 회원가입
      */
     public void signup(MemberRequestDTO.SignupDTO request) {
         // 1. 휴대폰 인증 상태 유효 여부 확인 (Redis에 저장한 Prefix 확인해서 15분이 안 지났는지 확인)
-        String isVerified = redisTemplate.opsForValue().get(VERIFIED_PREFIX + request.getPhoneNumber());
-        if (isVerified == null || !isVerified.equals("true")) {
-            throw new GeneralException(SmsErrorCode.SMS_VERIFY_EXPIRED);
-        }
+        validateSmsVerification(request.getPhoneNumber());
 
-        // 2. 비밀번호 암호화 처리
-        // 사용자가 입력한 평문 비밀번호를 해시화
+        // 2. 비밀번호 암호화
         String encodedPassword = passwordEncoder.encode(request.getPassword());
 
         // 3. 유저 엔티티 생성 및 저장
@@ -74,39 +70,71 @@ public class MemberService {
 
         memberRepository.save(member);
 
-        // 4. 약관 동의 저장
-        // 동의한 약관 ID 리스트를 순회하며 UserAgreement 생성
-        if (request.getAgreedAgreementIds() != null && !request.getAgreedAgreementIds().isEmpty()) {
-            List<MemberAgreement> memberAgreements = request.getAgreedAgreementIds().stream()
+        saveCommonMemberData(member, request.getAgreedAgreementIds(), request.getFixedExpenditures());
+
+        // Redis 내 인증 정보 삭제
+        redisTemplate.delete(VERIFIED_PREFIX + request.getPhoneNumber());
+    }
+
+    /**
+     * 구글(소셜) 회원가입
+     */
+    public void signupSocial(MemberRequestDTO.SocialSignupDTO request) {
+        // 이미 가입된 소셜 계정인지 확인
+        if (memberRepository.existsBySocialTypeAndSocialId(request.getSocialType(), request.getSocialId())) {
+            throw new GeneralException(MemberErrorCode.ALREADY_SOCIAL_REGISTERED);
+        }
+
+        Member member = Member.builder()
+                .socialId(request.getSocialId())
+                .socialType(request.getSocialType())
+                .loginId(request.getSocialType().toString() + "_" + request.getSocialId())
+                .name(request.getName())
+                .phoneNumber(request.getPhoneNumber())
+                .budget(request.getBudget())
+                .build();
+
+        memberRepository.save(member);
+
+        saveCommonMemberData(member, request.getAgreedAgreementIds(), request.getFixedExpenditures());
+    }
+
+    /**
+     * 약관 동의 및 고정 지출 (일반/구글 회원가입 공통)
+     */
+    private void saveCommonMemberData(Member member, List<Long> agreementIds, List<MemberRequestDTO.FixedExpenditureDTO> expenditures) {
+        // // 동의한 약관 ID 리스트를 순회하며 UserAgreement 생성
+        if (agreementIds != null && !agreementIds.isEmpty()) {
+            List<MemberAgreement> memberAgreements = agreementIds.stream()
                     .map(agreementId -> {
                         Agreement agreement = agreementRepository.getReferenceById(agreementId);
-
                         return MemberAgreement.builder()
                                 .member(member)
                                 .agreement(agreement)
-                                .isAgreed(true) // ★ 핵심: DB의 tinyint(1) NO 설정을 만족시키기 위해 true(1) 주입
+                                .isAgreed(true)
                                 .build();
                     })
                     .toList();
-
             memberAgreementRepository.saveAll(memberAgreements);
         }
 
-        // 5. 고정 지출 리스트 저장
-        // 사용자가 입력한 고정 지출 항목들을 유저 정보랑 매핑해 저장
-        if (request.getFixedExpenditures() != null && !request.getFixedExpenditures().isEmpty()) {
-            List<FixedExpenditure> expenditures = request.getFixedExpenditures().stream()
+        // 고정 지출 저장
+        if (expenditures != null && !expenditures.isEmpty()) {
+            List<FixedExpenditure> fixedExpenditures = expenditures.stream()
                     .map(dto -> FixedExpenditure.builder()
                             .item(dto.getItem())
                             .amount(dto.getAmount())
                             .member(member)
                             .build())
-                    .collect(Collectors.toList());
-
-            fixedExpenditureRepository.saveAll(expenditures);
+                    .toList();
+            fixedExpenditureRepository.saveAll(fixedExpenditures);
         }
+    }
 
-        // 6. 회원가입 완료 후 Redis 내 인증 정보 삭제
-        redisTemplate.delete(VERIFIED_PREFIX + request.getPhoneNumber());
+    private void validateSmsVerification(String phoneNumber) {
+        String isVerified = redisTemplate.opsForValue().get(VERIFIED_PREFIX + phoneNumber);
+        if (isVerified == null || !isVerified.equals("true")) {
+            throw new GeneralException(SmsErrorCode.SMS_VERIFY_EXPIRED);
+        }
     }
 }
